Closed
Bug 1924977
Opened 1 year ago
Closed 1 year ago
Missing edit menu entries when group header is selected in "grouped by sort" view
Categories
(Thunderbird :: Mail Window Front End, defect)
Tracking
(thunderbird_esr115 wontfix, thunderbird_esr128 wontfix, thunderbird136 affected)
RESOLVED
FIXED
137 Branch
People
(Reporter: francesco, Assigned: welpy-cw)
References
Details
Attachments
(3 files)
STR:
Start TB into a folder which is unthreaded and sorted by date.
View > Sort By > Grouped by sort. Collapse all. Click on group header.
Use Edit menu, it has empty entries, see screenshot.
There are quite a few errors in the error console.
Tested in 132.0b4, but also reproducible in 115 and 128.
| Reporter | ||
Updated•1 year ago
|
Summary: Missing edit menu entries when group header is selected in "grouped by sort" view, changing to unthreaded afterwards doesn't work → Missing edit menu entries when group header is selected in "grouped by sort" view
| Assignee | ||
Comment 1•1 year ago
•
|
||
- Disable cmd_selectThread for grouped views as this would lead to an invalid selection and is semantically incorrect anyway.
- Disable cmd_watchThread, cmd_killThread, and cmd_killSubthread for grouped views.
Updated•1 year ago
|
Assignee: nobody → h.w.forms
Attachment #9431301 -
Attachment description: WIP: Bug 1924977 - Fix main menu for selected group headers. → Bug 1924977 - Fix main menu for selected group headers. r=#thunderbird-reviewers
Status: NEW → ASSIGNED
| Assignee | ||
Comment 2•1 year ago
|
||
- Use the same algorithm for single folder and search db views and remove
nsMsgSearchDBView::GetHdrForFirstSelectedMessage(). - For expanded Grouped By Sort header rows, return
nullinstead of the message header for the first message below. - Do not count Grouped By Sort header rows in
nsMsgDBView::GetNumSelected. - Remove
nsMsgDBView::GetKeyForFirstSelectedMessage()as this is now used only once and can be easily replaced.
Updated•1 year ago
|
Attachment #9431301 -
Attachment description: Bug 1924977 - Fix main menu for selected group headers. r=#thunderbird-reviewers → Bug 1924977 - Disable some thread-related commands for grouped views. r=#thunderbird-reviewers
| Assignee | ||
Updated•1 year ago
|
Severity: -- → S3
status-thunderbird136:
--- → affected
status-thunderbird_esr115:
--- → wontfix
status-thunderbird_esr128:
--- → wontfix
Keywords: checkin-needed-tb,
leave-open
Target Milestone: --- → 137 Branch
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/c1fd627d14cc
Disable some thread-related commands for grouped views. r=mkmelin
Keywords: checkin-needed-tb
| Assignee | ||
Updated•1 year ago
|
Keywords: leave-open → checkin-needed-tb
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/ce7265270047
Refactor hdrForFirstSelectedMessage and numSelected. r=mkmelin
You need to log in
before you can comment on or make changes to this bug.
Description
•