Bug 1924977 - Refactor hdrForFirstSelectedMessage and numSelected. r=mkmelin

- Use the same algorithm for single folder and search db views and remove `nsMsgSearchDBView::GetHdrForFirstSelectedMessage().`
- For expanded Grouped By Sort header rows, return `null` instead of the message header for the first message below.
- Do not count Grouped By Sort header rows in `nsMsgDBView::GetNumSelected`.
- Remove `nsMsgDBView::GetKeyForFirstSelectedMessage()` as this is now used only once and can be easily replaced.

Differential Revision: https://phabricator.services.mozilla.com/D236469

--HG--
extra : rebase_source : 32abdde63cb49194c15d5500d4ec21b3428c3278